--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,145 @@
-/* Space out content a bit */
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  font-size: 17px;
+  color: #fff;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+  background: #241e20;
+  /* Old browsers */
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
+  background: -moz-linear-gradient(45deg, #241e20 0%, #323030 100%);
+  /* FF3.6+ */
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #241e20), color-stop(100%, #323030));
+  /* Chrome,Safari4+ */
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
+  background: -webkit-linear-gradient(45deg, #241e20 0%, #323030 100%);
+  /* Chrome10+,Safari5.1+ */
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
+  background: -o-linear-gradient(45deg, #241e20 0%, #323030 100%);
+  /* Opera 11.10+ */
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
+  background: -ms-linear-gradient(45deg, #241e20 0%, #323030 100%);
+  /* IE10+ */
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
+  background: linear-gradient(45deg, #241e20 0%, #323030 100%);
+  /* W3C */
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+  background-size: 100vw 100vh;
+}
+img {
+  width: 100px;
+  height: 100px;
+}
+ul,
+li {
+  list-style-type: none;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+  padding-bottom: .25em;
+  border-bottom: 1px solid #fff;
+}
+#navbar {
+  overflow: hidden;
+  height: 20vh;
+  width: 80vw;
+  position: relative;
+}
+#navbar #brand {
+  position: absolute;
+  width: 20vh;
+  height: 20vh;
+  left: 50%;
+  margin-left: -10vh;
+}
+#navbar #brand .name {
+  display: none;
+}
+#navbar #brand .logo {
+  max-height: 100%;
+}
+#navbar #search,
+#navbar #navigation {
+  display: block;
+  float: left;
+  width: 40vw;
+  height: 20vh;
+  line-height: 20vh;
+}
+#navbar #search {
+  padding-right: 15vh;
+}
+#navbar #navigation {
+  padding-left: 15vh;
+}
+#navbar,
+#content {
+  display: block;
+  width: 80vw;
+  margin-left: 10vw;
+}
+#content {
+  max-height: 80vh;
+}
+.menu {
+  display: block;
+  width: 80vw;
+  height: 80vw;
+}
+.menu .actions {
+  display: block;
+  width: 80vw;
+  /*    height:40vw;
+    overflow:hidden;
+*/
+}
+.menu .actions .action {
+  vertical-align: top;
+  display: inline-block;
+  float: left;
+  width: 20vw;
+  height: 20vw;
+  min-width: 150px;
+  max-width: 200px;
+  min-height: 150px;
+  max-height: 200px;
+}
+.menu .actions .action a {
+  position: relative;
+  display: inline-block;
+  width: 94%;
+  height: 94%;
+  border: 1px solid white;
+  margin: 3%;
+}
+.menu .actions .action a:active,
+.menu .actions .action a:hover {
+  background: rgba(255, 255, 255, 0.25);
+}
+.menu .actions .action .action-icon {
+  margin-left: 25%;
+  margin-top: .5em;
+  width: 50%;
+  height: 50%;
+}
+.menu .actions .action .action-title {
+  position: absolute;
+  bottom: 0;
+  padding: .5em;
 }
