--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -21,12 +21,12 @@ body{
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
   background: #241e20; /* Old browsers */
-  background: -moz-linear-gradient(45deg, #241e20 0%, #323030 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#241e20), color-stop(100%,#323030)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(45deg, #241e20 0%,#323030 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(45deg, #241e20 0%,#323030 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(45deg, #241e20 0%,#323030 100%); /* IE10+ */
-  background: linear-gradient(45deg, #241e20 0%,#323030 100%); /* W3C */
+  background: -moz-linear-gradient(45deg, #241e20 0%, #323030 100%); 
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#241e20), color-stop(100%,#323030)); 
+  background: -webkit-linear-gradient(45deg, #241e20 0%,#323030 100%); 
+  background: -o-linear-gradient(45deg, #241e20 0%,#323030 100%); 
+  background: -ms-linear-gradient(45deg, #241e20 0%,#323030 100%);
+  background: linear-gradient(45deg, #241e20 0%,#323030 100%); 
   background-size: 100vw 110%;
   max-width:100vw;
   overflow-x:hidden;
