--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,13 +21,8 @@ body {
   font-size: 17px;
   color: #fff;
   text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
+  font-smoothing: antialiased !important;
   background: #241e20;
-  background: -moz-linear-gradient(45deg, #241e20 0%, #323030 100%);
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #241e20), color-stop(100%, #323030));
-  background: -webkit-linear-gradient(45deg, #241e20 0%, #323030 100%);
-  background: -o-linear-gradient(45deg, #241e20 0%, #323030 100%);
-  background: -ms-linear-gradient(45deg, #241e20 0%, #323030 100%);
   background: linear-gradient(45deg, #241e20 0%, #323030 100%);
   background-size: 100vw 110%;
   max-width: 100vw;
@@ -123,15 +118,20 @@ input {
 }
 .menu,
 .destination {
-  display: none;
+  display: block;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.2s ease-in;
+  position: absolute;
+  top: 20vh;
+  width: 80vw;
+  left: 10vw;
+  height: 60vh;
 }
 .menu.active,
 .destination.active {
-  display: block;
-}
-.menu {
-  width: 80vw;
-  height: 60vh;
+  transform: scale(1);
+  opacity: 1;
 }
 .menu .menu-title {
   position: relative;
@@ -183,6 +183,8 @@ input {
   margin-top: .5em;
   width: 50%;
   height: 50%;
+  background-position: center;
+  background-size: contain;
 }
 .menu .actions .action .action-title {
   position: absolute;
