--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -118,15 +118,15 @@ input {
 }
 .menu,
 .destination {
-  display: block;
-  opacity: 0;
-  transform: scale(0);
-  transition: all 0.2s ease-in;
   position: absolute;
+  display: block;
   top: 20vh;
   width: 80vw;
   left: 10vw;
   height: 60vh;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.2s ease-in;
 }
 .menu.active,
 .destination.active {
@@ -152,6 +152,7 @@ input {
 .menu .actions {
   display: block;
   width: 80vw;
+  max-width: 960px;
   text-align: center;
 }
 .menu .actions .action {
@@ -161,6 +162,8 @@ input {
   float: left;
   width: 20vw;
   height: 20vw;
+  max-width: 220px;
+  max-height: 220px;
 }
 .menu .actions .action a {
   min-width: 150px;
@@ -191,6 +194,20 @@ input {
   bottom: 0;
   padding: .5em;
 }
+/*@media screen and (max-width : 960px) {
+  .menu,.destination{
+    .actions{
+      .action{
+        &:nth-of-type(3n + 0){
+          background:red;
+          margin-right:50%;
+        }
+        max-width:200px;
+        max-height:200px;
+      }
+    }
+  }
+}*/
 @media screen and (max-width: 720px) {
   .menu .actions .action {
     min-width: 40vw;
