--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -50,6 +50,12 @@ input{
   color:#fff;
 }
 
+svg.icon {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  fill:red;
+}
 
 #navbar{
   position:relative;
