--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -50,6 +50,12 @@ input {
   padding: .25em .5em;
   color: #fff;
 }
+svg.icon {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  fill: red;
+}
 #navbar {
   position: relative;
   overflow: hidden;
