--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,199 +7,378 @@ html {
   box-sizing: inherit;
   font-size: inherit;
   font-weight: inherit;
+  font-family: inherit;
   margin: 0;
   padding: 0;
   border: 0;
 }
 html {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 body {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+}
+html {
+  background: #241e20;
+  background: linear-gradient(45deg, #241e20 0%, #323030 100%);
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
   font-size: 17px;
-  color: #fff;
-  text-rendering: optimizeLegibility !important;
-  font-smoothing: antialiased !important;
-  background: #241e20;
-  background: linear-gradient(45deg, #241e20 0%, #323030 100%);
-  background-size: 100vw 110%;
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-img {
-  width: 100px;
-  height: 100px;
-}
-ul,
-li {
-  list-style-type: none;
-}
-a {
-  color: #fff;
-  text-decoration: none;
-  padding-bottom: .25em;
-  border-bottom: 1px solid #fff;
-}
-input {
-  outline: none;
-  display: inline-block;
-  border: 1px solid #fff;
-  background: transparent;
-  padding: .25em .5em;
-  color: #fff;
-}
-svg.icon {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  fill: red;
 }
 #navbar {
-  position: relative;
-  overflow: hidden;
-  height: 20vh;
-  width: 90vw;
-  margin-left: 5vw;
+  width: 100%;
   display: block;
+  float: left;
+  max-height: 20%;
+  padding: 0 10vw;
+}
+#navbar #brand,
+#navbar #search,
+#navbar #navigation {
+  max-height: 100%;
+  overflow: hidden;
+  display: inline-block;
+  float: left;
+  min-height: 100%;
 }
 #navbar #brand {
-  position: absolute;
-  width: 20vh;
-  height: 20vh;
-  left: 45vw;
-  margin-left: -10vh;
-}
-#navbar #brand a {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: 0;
+  width: 20%;
+  text-align: center;
 }
 #navbar #brand .name {
   display: none;
 }
-#navbar #brand .logo {
-  max-height: 100%;
-}
 #navbar #search,
 #navbar #navigation {
-  display: block;
-  float: left;
-  width: 45vw;
-  height: 20vh;
-  line-height: 20vh;
+  width: 40%;
+  margin-top: 2em;
 }
 #navbar #search {
-  padding-right: 15vh;
-  position: relative;
   text-align: left;
 }
 #navbar #search label {
   position: relative;
-  display: inline-block;
 }
-#navbar #search i {
+#navbar #search label .fa {
   position: absolute;
-  top: 9vh;
-  left: .5em;
+  margin: .25em;
+  color: #fff;
 }
-#navbar #search input {
-  padding-left: 1.75em;
-  max-width: 20vw;
+#navbar #search label input {
+  outline: none;
+  border: 1px solid #fff;
+  background: none;
+  padding: .1em .25em .1em 1.5em;
 }
 #navbar #navigation {
-  padding-left: 15vh;
   text-align: right;
+  white-space: nowrap;
 }
 #navbar #navigation a {
-  margin: 0 1vw;
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  margin-left: 1em;
 }
 #content {
   display: block;
-  width: 80vw;
-  margin-left: 10vw;
-  max-height: 80vh;
+  float: left;
+  width: 100%;
 }
-.menu,
-.destination {
-  position: absolute;
+#content .menu {
+  white-space: nowrap;
   display: block;
-  top: 20vh;
-  width: 80vw;
-  left: 10vw;
-  height: 60vh;
-  opacity: 0;
-  transform: scale(0);
-  transition: all 0.2s ease-in;
+  float: left;
+  width: 100%;
+  height: 100%;
 }
-.menu.active,
-.destination.active {
-  transform: scale(1);
-  opacity: 1;
-}
-.menu .menu-title {
-  position: relative;
-  display: block;
-  height: 10vh;
-  margin: 0 0 2vh 0;
-}
-.menu .menu-title h1 {
-  position: absolute;
-  bottom: 0;
-  font-size: 26px;
-  line-height: 32px;
-}
-.menu .menu-title .back {
-  border: 0;
-  font-weight: normal;
-}
-.menu .actions {
-  display: block;
-  width: 80vw;
-  max-width: 960px;
-  text-align: center;
-}
-.menu .actions .action {
-  text-align: left;
-  vertical-align: top;
+#content .action {
+  white-space: normal;
   display: inline-block;
   float: left;
-  width: 20vw;
-  height: 20vw;
-  max-width: 220px;
-  max-height: 220px;
+  width: 160px;
+  height: 160px;
 }
-.menu .actions .action a {
-  min-width: 150px;
-  max-width: 200px;
-  min-height: 150px;
-  max-height: 200px;
-  position: relative;
+#content .action .inner {
+  border: 1px solid #fff;
+  display: block;
+  float: left;
+  width: 150px;
+  height: 150px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+#content .action .inner:hover .action-title {
+  color: rgba(255, 255, 255, 0.75);
+}
+#content .action .inner > * {
+  max-width: 100%;
+}
+img {
+  width: 100px;
+  height: 100px;
+  max-width: 100px;
+  max-height: 100px;
+}
+.large_squares #content .menu .action {
+  background: lime;
+  width: 220px;
+  height: 220px;
+}
+.large_squares #content .menu .action .inner {
+  width: 200px;
+  height: 200px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+@media screen and (max-width: 960px) {
+  #content .menu .action {
+    background: lime;
+    width: 220px;
+    height: 220px;
+  }
+  #content .menu .action .inner {
+    width: 200px;
+    height: 200px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  #content .menu {
+    max-width: 660px;
+  }
+}
+@media screen and (min-width: 960px) {
+  #content .menu {
+    background: red;
+  }
+}
+@media screen and (min-width: 1320px) {
+  #content .menu .action {
+    background: lime;
+    width: 220px;
+    height: 220px;
+  }
+  #content .menu .action .inner {
+    width: 200px;
+    height: 200px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+}
+/*html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+  font-size:inherit;
+  font-weight:inherit;
+  margin:0;padding:0;border:0;
+}
+
+html{
+  width:100%;
+  height:100%;
+}
+body{
+  font-family: 'Ubuntu', sans-serif;
+  font-weight:300;
+  font-size:17px;
+  color:#fff;
+  text-rendering: optimizeLegibility !important;
+  font-smoothing: antialiased !important;
+  background: #241e20; 
+  background: linear-gradient(45deg, #241e20 0%,#323030 100%); 
+  background-size: 100vw 110%;
+  max-width:100vw;
+  overflow-x:hidden;
+}
+img{
+  width:100px;
+  height:100px;  
+}
+
+ul, li{
+  list-style-type:none;
+}
+
+a{
+  color:#fff;
+  text-decoration:none;
+  padding-bottom:.25em;
+  border-bottom:1px solid #fff;
+}
+input{
+  outline:none;
+  display:inline-block;
+  border:1px solid #fff;
+  background:transparent;
+  padding:.25em .5em;
+  color:#fff;
+}
+
+svg.icon {
   display: inline-block;
-  width: 94%;
-  height: 94%;
-  border: 1px solid white;
-  margin: 3%;
+  width: 25px;
+  height: 25px;
+  fill:red;
 }
-.menu .actions .action a:active,
-.menu .actions .action a:hover {
-  background: rgba(255, 255, 255, 0.25);
+
+#navbar{
+  position:relative;
+  overflow:hidden;
+  height:20vh;
+  width:90vw;
+  margin-left:5vw;
+  display:block;  
+  #brand{
+    position:absolute;
+    width:20vh;
+    height:20vh;
+    left:45vw;
+    margin-left:-10vh;
+    a{
+      display:block;
+      width:100%;
+      height:100%;
+      border:0;
+    }
+    .name{
+      display:none;
+    }
+    .logo{
+      max-height:100%;
+    }
+  }
+  #search,#navigation{
+    display:block;
+    float:left;
+    width:45vw;
+    height:20vh;
+    line-height:20vh;
+  }
+  
+  #search{
+    padding-right:15vh;
+    position:relative;    
+    text-align:left;
+    label{
+      position:relative;      
+      display:inline-block;
+    }
+    i{
+      position: absolute;
+      top: 9vh;
+      left: .5em;
+    }
+    input{
+      padding-left:1.75em;
+      max-width:20vw;
+    }
+  }
+  #navigation{
+    padding-left:15vh;
+    text-align:right;
+    a{margin:0 1vw;}
+  }  
 }
-.menu .actions .action .action-icon {
-  margin-left: 25%;
-  margin-top: .5em;
-  width: 50%;
-  height: 50%;
-  background-position: center;
-  background-size: contain;
+
+#content{
+  display:block;
+  width:80vw;
+  margin-left:10vw;
+  max-height:80vh;
+  
 }
-.menu .actions .action .action-title {
-  position: absolute;
-  bottom: 0;
-  padding: .5em;
+
+.menu,.destination{
+  position:absolute;
+  display:block;
+  top:20vh;
+  width:80vw;
+  left:10vw;
+  height:60vh;
+  opacity:0;
+  transform: scale(0);
+  transition:all .2s ease-in;
+
+  
+  &.active{
+    transform: scale(1);
+    opacity:1;
+  }
 }
+.menu{
+
+  #greeting{
+  }
+  .menu-title{
+    position:relative;
+    display:block;
+    height:10vh;
+    
+    margin:0 0 2vh 0;
+    h1{
+      position:absolute;
+      bottom:0;
+      font-size:26px;
+      line-height:32px;
+    }
+    .back{
+      border:0;
+      font-weight:normal;
+    }
+  }
+  .actions{
+    display:block;
+    width:80vw;
+    max-width:960px;
+    text-align:center;
+    .action{
+      text-align:left;
+      vertical-align:top;
+      display:inline-block;
+      float:left;
+      width:20vw;
+      height:20vw;
+      max-width:220px;
+      max-height:220px;      
+      a{
+        min-width:150px;
+        max-width:200px;
+        min-height:150px;
+        max-height:200px;      
+        
+        &:active,&:hover{
+          background:rgba(255,255,255,0.25);
+        }
+        position:relative;
+        display:inline-block;
+        width:94%;
+        height:94%;
+        border:1px solid white;
+        margin:3%;
+      }
+      .action-icon{
+        margin-left:25%;
+        margin-top:.5em;
+        width:50%;
+        height:50%;
+        background-position:center;
+        background-size:contain;
+      }
+      .action-title{
+        position:absolute;
+        bottom:0;
+        padding:.5em;
+      }
+    }
+  }
+}
+*/
 /*@media screen and (max-width : 960px) {
   .menu,.destination{
     .actions{
@@ -214,22 +393,30 @@ svg.icon {
     }
   }
 }*/
+/*
 @media screen and (max-width: 720px) {
-  .menu .actions .action {
-    min-width: 40vw;
-    min-height: 40vw;
+  .menu .actions{
+    .action{
+      min-width:40vw;
+      min-height:40vw;
+    }
   }
 }
+
 @media screen and (max-width: 480px) {
-  .menu .actions .action {
-    min-width: 80vw;
-    min-height: 80vw;
-    margin: 0 0 2vw 0;
-  }
-  .menu .actions .action a {
-    min-width: 90%;
-    min-height: 90%;
-    max-width: auto;
-    max-height: auto;
+  .menu .actions{
+    .action{
+      min-width:80vw;
+      min-height:80vw;
+      margin:0 0 2vw 0;
+      a{
+        min-width:90%;
+        min-height:90%;
+        max-width:auto;
+        max-height:auto;
+      }
+    }
   }
 }
+
+*/
