--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -16,20 +16,35 @@ body{
   width:100%;
   height:100%;
   color:#fff;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight:300;
+  font-size:17px;
+  line-height:20px;
+  -webkit-font-smoothing: antialiased;
+/*  text-shadow: 1px 1px 1px rgba(255,255,255,0.004);*/
 }
 html{
   background: #241e20; 
   background: linear-gradient(45deg, #241e20 0%,#323030 100%); 
-  font-family: 'Ubuntu', sans-serif;
-  font-weight:300;
-  font-size:17px;
 }
+a{
+  text-decoration:none;
+  color:#fff;
+}
+
+.actions,.links{
+/*  display:block;
+  float:left;
+  padding-bottom:10px;*/
+  list-style-type:none;
+}
+
 #navbar{
   width:100%;
   display:block;
   float:left;
   max-height:20%;
-  padding:0 10vw;
+  padding:0 4vw;
   #brand,#search,#navigation{
     max-height:100%;
     overflow:hidden;
@@ -51,14 +66,14 @@ html{
     label{ position:relative; }
     label .fa{
       position:absolute;
-      margin:.25em;
+      margin:.37em;
       color:#fff;
     }
     label input{
       outline:none;
       border:1px solid #fff;
       background:none;
-      padding:.1em .25em .1em 1.5em;
+      padding:.25em .25em .25em 1.5em;
     }
   }
   #navigation{
@@ -73,23 +88,108 @@ html{
   }  
 }
 #content{
+  position:relative;
   display:block;
   float:left;
   width:100%;
+  padding:0 4vw;
   .menu{
+    position:relative;
     white-space:nowrap;
-    display:block;
     float:left;
-    width:100%;
-    height:100%;
+    display:block;
+/*    overflow:hidden;*/
+    opacity:0;
+    width:0;
+    height:0;
+    transition:all .2s ease-in;
+    text-align:left;
+    &.active{
+      width:100%;
+      height:100%;
+      opacity:1;
+    }
+    .menu-title{
+      padding: 1em;
+      line-height: 25px;
+    }
   }
   .action{
     white-space:normal;
     display:inline-block;
-    float:left;
+/*    float:left;*/
     width:160px;
     height:160px;
+    text-align:center;
+    padding:1em;
+    .action-icon,
+    .action-title,
+    .action-description{
+      display:inline-block;
+      color:#fff;
+      text-align:left;
+      width:100%;
+    }
+    .action-title{
+      position:absolute;
+      padding:0 .5em .5em .5em;
+      left:0;
+      bottom:0;
+    }
+    .action-description{
+      padding:0 .5em;
+      font-size:15px;
+    }
+    .action-icon{
+      height:80px;
+      width:80px;
+      margin-top:.5em;
+    }
+    &.link-action{
+      .inner{
+        height:200px;
+      }
+      .action-title{
+        padding:.5em;
+        position:relative;
+      }
+      .links{
+        display:block;
+        float:left;
+        width:100px;
+        height:40px;
+        margin-left:25px;
+        margin-top:-60px;
+        position:relative;
+        .prev,.next,.link{
+          position:absolute;
+          a{
+            display:block;width:100%;height:40px;
+          }
+        }
+        .link{
+          top:0;left:0;
+          display:inline-block;
+          width:100px;
+          height:40px;
+          overflow:hidden;
+        }
+        .prev,.next{
+          text-align:center;
+          display:inline-block;
+          font-size:.75em;
+          top:.75em;
+          width:25px;
+          height:40px;
+          left:-25px;
+        }
+        .next{
+          left:100px;
+        }
+      }
+    }
     .inner{
+      position:relative;
       border:1px solid #fff;
       display:block;
       float:left;
@@ -101,9 +201,10 @@ html{
       > *{
         max-width:100%;
       }
-    }
-    
+    } 
   }
+  
+  
 }
 
 img{
@@ -117,14 +218,26 @@ img{
   #content{
      .menu{
         .action{
-         background:lime;
          width:220px;
          height:220px;
+         .action-icon{
+           height:120px;
+           width:120px;
+           margin-top:1em;
+           margin-left:1em;
+         }
+         
          .inner{
            width:200px;
            height:200px;
            padding-right:20px;
            padding-bottom:20px;
+         }
+         .links{
+           &, &.link{
+             width:140px;
+             height:60px;
+           }
          }
        }
     }
@@ -144,7 +257,7 @@ img{
 @media screen and (min-width: 960px) {
   #content{
     .menu{
-      background:red;
+/*      background:red;*/
     }    
   }
 }
@@ -152,255 +265,3 @@ img{
 @media screen and (min-width: 1320px){
   .large_squares;
 }
-/*html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-  font-size:inherit;
-  font-weight:inherit;
-  margin:0;padding:0;border:0;
-}
-
-html{
-  width:100%;
-  height:100%;
-}
-body{
-  font-family: 'Ubuntu', sans-serif;
-  font-weight:300;
-  font-size:17px;
-  color:#fff;
-  text-rendering: optimizeLegibility !important;
-  font-smoothing: antialiased !important;
-  background: #241e20; 
-  background: linear-gradient(45deg, #241e20 0%,#323030 100%); 
-  background-size: 100vw 110%;
-  max-width:100vw;
-  overflow-x:hidden;
-}
-img{
-  width:100px;
-  height:100px;  
-}
-
-ul, li{
-  list-style-type:none;
-}
-
-a{
-  color:#fff;
-  text-decoration:none;
-  padding-bottom:.25em;
-  border-bottom:1px solid #fff;
-}
-input{
-  outline:none;
-  display:inline-block;
-  border:1px solid #fff;
-  background:transparent;
-  padding:.25em .5em;
-  color:#fff;
-}
-
-svg.icon {
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  fill:red;
-}
-
-#navbar{
-  position:relative;
-  overflow:hidden;
-  height:20vh;
-  width:90vw;
-  margin-left:5vw;
-  display:block;  
-  #brand{
-    position:absolute;
-    width:20vh;
-    height:20vh;
-    left:45vw;
-    margin-left:-10vh;
-    a{
-      display:block;
-      width:100%;
-      height:100%;
-      border:0;
-    }
-    .name{
-      display:none;
-    }
-    .logo{
-      max-height:100%;
-    }
-  }
-  #search,#navigation{
-    display:block;
-    float:left;
-    width:45vw;
-    height:20vh;
-    line-height:20vh;
-  }
-  
-  #search{
-    padding-right:15vh;
-    position:relative;    
-    text-align:left;
-    label{
-      position:relative;      
-      display:inline-block;
-    }
-    i{
-      position: absolute;
-      top: 9vh;
-      left: .5em;
-    }
-    input{
-      padding-left:1.75em;
-      max-width:20vw;
-    }
-  }
-  #navigation{
-    padding-left:15vh;
-    text-align:right;
-    a{margin:0 1vw;}
-  }  
-}
-
-#content{
-  display:block;
-  width:80vw;
-  margin-left:10vw;
-  max-height:80vh;
-  
-}
-
-.menu,.destination{
-  position:absolute;
-  display:block;
-  top:20vh;
-  width:80vw;
-  left:10vw;
-  height:60vh;
-  opacity:0;
-  transform: scale(0);
-  transition:all .2s ease-in;
-
-  
-  &.active{
-    transform: scale(1);
-    opacity:1;
-  }
-}
-.menu{
-
-  #greeting{
-  }
-  .menu-title{
-    position:relative;
-    display:block;
-    height:10vh;
-    
-    margin:0 0 2vh 0;
-    h1{
-      position:absolute;
-      bottom:0;
-      font-size:26px;
-      line-height:32px;
-    }
-    .back{
-      border:0;
-      font-weight:normal;
-    }
-  }
-  .actions{
-    display:block;
-    width:80vw;
-    max-width:960px;
-    text-align:center;
-    .action{
-      text-align:left;
-      vertical-align:top;
-      display:inline-block;
-      float:left;
-      width:20vw;
-      height:20vw;
-      max-width:220px;
-      max-height:220px;      
-      a{
-        min-width:150px;
-        max-width:200px;
-        min-height:150px;
-        max-height:200px;      
-        
-        &:active,&:hover{
-          background:rgba(255,255,255,0.25);
-        }
-        position:relative;
-        display:inline-block;
-        width:94%;
-        height:94%;
-        border:1px solid white;
-        margin:3%;
-      }
-      .action-icon{
-        margin-left:25%;
-        margin-top:.5em;
-        width:50%;
-        height:50%;
-        background-position:center;
-        background-size:contain;
-      }
-      .action-title{
-        position:absolute;
-        bottom:0;
-        padding:.5em;
-      }
-    }
-  }
-}
-*/
-/*@media screen and (max-width : 960px) {
-  .menu,.destination{
-    .actions{
-      .action{
-        &:nth-of-type(3n + 0){
-          background:red;
-          margin-right:50%;
-        }
-        max-width:200px;
-        max-height:200px;
-      }
-    }
-  }
-}*/
-/*
-@media screen and (max-width: 720px) {
-  .menu .actions{
-    .action{
-      min-width:40vw;
-      min-height:40vw;
-    }
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .menu .actions{
-    .action{
-      min-width:80vw;
-      min-height:80vw;
-      margin:0 0 2vw 0;
-      a{
-        min-width:90%;
-        min-height:90%;
-        max-width:auto;
-        max-height:auto;
-      }
-    }
-  }
-}
-
-*/
