--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -39,6 +39,9 @@ a{
   list-style-type:none;
 }
 
+#content .placeholder{
+  display:none;
+}
 #navbar{
   width:100%;
   display:block;
@@ -168,11 +171,22 @@ a{
           }
         }
         .link{
+          opacity:0;
+          transition:opacity .1s ease-in-out;
           top:0;left:0;
-          display:inline-block;
           width:100px;
           height:40px;
           overflow:hidden;
+          display:none;
+          a, img{
+            display:inline-block;
+            width:100%;
+            height:100%;
+          }
+          &.active{
+            display:inline-block;
+            opacity:1;
+          }
         }
         .prev,.next{
           text-align:center;
@@ -217,6 +231,11 @@ img{
 .large_squares{
   #content{
      .menu{
+        li > a{
+          display:inline-block;
+          width:100%;
+          height:100%;
+        }
         .action{
          width:220px;
          height:220px;
@@ -234,9 +253,19 @@ img{
            padding-bottom:20px;
          }
          .links{
-           &, &.link{
-             width:140px;
-             height:60px;
+           width:150px;
+           height:50px;
+           .link{
+             width:160px;
+             height:50px;
+           }
+           .prev,.next{
+             width:40px;
+             height:50px;
+             left:-20px;
+           }
+           .next{
+             left:140px;
            }
          }
        }
