--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -66,7 +66,12 @@ a{
   }
   #search{
     text-align:left;
-    label{ position:relative; }
+    label{ 
+      display:inline-block;
+      position:relative; 
+      width:100%;
+      height:100%;
+    }
     label .fa{
       position:absolute;
       margin:.37em;
