--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -177,20 +177,26 @@ a{
         }
         .link{
           opacity:0;
-          transition:opacity .1s ease-in-out;
+          transition:all .1s ease-in-out;
           top:0;left:0;
           width:100px;
-          height:40px;
-          overflow:hidden;
+          height:0px;
           display:none;
           a, img{
             display:inline-block;
             width:100%;
             height:100%;
+            min-width:100%;
+            min-height:100%;
+          }
+          a > img{
+            min-width:100%;
+            min-height:100%;
           }
           &.active{
             display:inline-block;
             opacity:1;
+            height:40px;
           }
         }
         .prev,.next{
@@ -258,16 +264,17 @@ img{
            padding-bottom:20px;
          }
          .links{
-           width:150px;
-           height:50px;
+           width:140px;
+           height:56px;
+           margin-top:-76px;
            .link{
-             width:160px;
-             height:50px;
+             width:140px;
+             &.active{ height:56px; }
            }
            .prev,.next{
-             width:40px;
-             height:50px;
-             left:-20px;
+             width:30px;
+             height:56px;
+             left:-30px;
            }
            .next{
              left:140px;
