--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -66,6 +66,7 @@ a{
   }
   #search{
     text-align:left;
+    margin-top:1.75em;
     label{ 
       display:inline-block;
       position:relative; 
