--- a/app/styles/concierge.less
+++ b/app/styles/concierge.less
@@ -51,6 +51,7 @@ body{
   color:#fff;
   text-rendering: optimizeLegibility !important;
   font-smoothing: antialiased !important;
+  -webkit-font-smoothing: antialiased;
   text-shadow:0px 0px 1px rgba(0,0,0,0.03);
   text-align:center;
   margin-left:auto;
@@ -76,6 +77,9 @@ div,section,header,nav,article,footer,.menu-actions,.action-links{
   font-size:8px;
   font-size:.8rem;
   color:#333;
+  text-shadow:rgba(255,255,255,0.03);
+  text-align:center;
+  padding:5px;
 }
 #topbar{
   text-align:center;
@@ -225,6 +229,19 @@ h1{
     opacity:1;
     transform:scale(1) translateX(0);
   }
+  .menu-head{
+     font-size:32px;
+     font-size:3.2rem;
+     width:100%;
+     height:40px;
+     margin-top:100px;
+     margin-top:10rem;
+     margin-bottom:40px;
+     margin-bottom:4rem;
+   }
+   .menu-body{
+     width:100%;
+   }
 }
 .action{
   cursor:pointer;
@@ -275,14 +292,6 @@ h1{
     height:60%;
     padding:@pad;
     text-align:center;
-  }
-  .menu-head{
-    font-size:32px;
-    font-size:3.2rem;
-    width:100%;
-  }
-  .menu-body{
-    width:100%;
   }
 }
 
@@ -458,8 +467,12 @@ h1{
     .action{
       white-space:normal;
       max-width:140px;
-      font-size:15px;
-      font-size:1.5rem;
+      font-size:13px;
+      font-size:1.3rem;
+      .action-icon{
+        width:80px;
+        height:80px;
+      }
     }
     .dev .action{
       background:green;
