--- a/gab/gab.css
+++ b/gab/gab.css
@@ -1,4 +1,31 @@
+.glyphicon {
+    font-size: 30px;
+    margin-top: 3px;
+    margin-left: 10px;
+}
+
+#search {
+  margin-top: -20px;
+}
+
+.black {
+  color: #000;
+}
+
 body {
   padding-top: 50px;
+  background-color: black;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight:300;
+  font-size:17px;
+  font-size:1.7rem;
+  color:#fff;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f5f5f5;
 }
 
