--- a/gab/gab.css
+++ b/gab/gab.css
@@ -1,3 +1,11 @@
+.new-task {
+  margin-right: 15px;
+  margin-top: 20px; 
+}
+
+#username {
+  margin-top: 20px; 
+}
 #new {
   font-size: 25px;
   margin-right: 15px;
