--- a/gab/gab.css
+++ b/gab/gab.css
@@ -1,31 +1,7 @@
-.new-task {
-  margin-right: 15px;
-  margin-top: 20px; 
-}
-
-#username {
-  margin-top: 20px; 
-}
-#new {
-  font-size: 25px;
-  margin-right: 15px;
+.new-post {
   margin-top: 20px;
 }
-#message {
-  width:100%;
-  margin-top: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
- 
-}
-#chat_box {
-  margin-top:25px; 
-  padding:10px;
-  background-color:white;
-  width:100%;
-  margin-right: 10px;
-  margin-left: 10px;  
-}
+
 body,ul,li {
 	padding:0;
 	margin:0;
@@ -131,4 +107,3 @@ body {
   height: 50px;
   background-color: #f5f5f5;
 }
-
