--- a/gab/gab.css
+++ b/gab/gab.css
@@ -112,3 +112,22 @@ body {
   width: 100%;
   padding:10px;
 }
+.search_results li {
+  padding:0 10px;
+  height:45px;
+  line-height:40px;
+  border-bottom:1px solid #ccc;
+  border-top:1px solid #fff;
+  background-color:#fafafa;
+  font-size:14px;
+  border-radius: 3px;
+}
+.friends_button {
+  margin-top:5px;
+  margin-left:5px;
+  float:right;
+  padding: 1px 5px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
