--- a/gab/gab.css
+++ b/gab/gab.css
@@ -129,10 +129,10 @@ body {
   line-height: 1.5;
   border-radius: 3px;
 }
-#friends {
+.friends {
   margin:5px;
 }
-#friends ul {
+.friends ul {
   list-style:none;
   padding:0;
   margin:0;
@@ -140,7 +140,7 @@ body {
   text-align:left;
 }
 
-#friends li {
+.friends li {
   padding:0 10px;
   height:35px;
   line-height:35px;
