--- a/gab/gab.css
+++ b/gab/gab.css
@@ -1,3 +1,19 @@
+.icons {
+  border: 3px solid white;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.icons p {
+  color: white;
+}
+
+.icons img {
+  max-width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .new-post {
   margin-top: 20px;
