--- a/gab/gab.css
+++ b/gab/gab.css
@@ -9,10 +9,11 @@
 }
 
 .icons img {
-  max-width: 100px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 10vw;
+  height: 10vw;
 }
 
 .new-post {
