--- a/gab/gab.css
+++ b/gab/gab.css
@@ -1,3 +1,14 @@
+.conv_wrapper {
+}
+.conversations_ul {
+}
+
+.conversations_ul li {
+
+}
+.mess_scroller {
+  height:100%;
+}
 .greatings h2,h3 {
   color:white;
   margin-top: 10px;
@@ -142,6 +153,21 @@ body {
 	font-size:14px;
 }
 
+#users_admin ul {
+        list-style:none;
+        padding:0;
+        margin:0;
+        width:100%;
+        text-align:left;
+}
+
+#users_admin li {
+        padding:0 10px;
+        height:40px;
+        line-height:40px;
+        background-color:#fafafa;
+        font-size:14px;
+}
 
 .footer-icons {
     font-size: 30px;
