--- a/gab/gab.css
+++ b/gab/gab.css
@@ -34,17 +34,58 @@
   position:absolute; z-index:2;
   height:46px;
 }
-
-.icons {
-  border: 3px solid white;
-  padding: 10px;
-  margin-top: 20px;
+.back-button {
+  color: white;
+  cursor:pointer;
 }
-
+.act-desc {
+  margin-top:15px; 
+  font-size:23px;
+  color:white;
+  margin-bottom:40px;
+}
+.logo {
+  text-align:center;
+}
+.icons {
+  border: 1.5px solid rgba(255,255,255, .5);
+  padding: 10px;
+  text-align:left;
+}
 .icons p {
   color: white;
   font-size:16px;
 }
+.tag_icons {
+  border: 1.5px solid rgba(255,255,255, .5);
+  padding: 10px;
+  text-align:left;
+
+}
+
+.tag_icons p {
+  color: white;
+  font-size:18px;
+}
+.subtitle p {
+  font-size:16px;
+}
+.item {
+  text-align:center;
+}
+.act_icons {
+  border: 1.5px solid rgba(255,255,255, .5);
+  padding: 10px;
+  margin-top: 20px;
+  text-align:center;
+}
+.act_icons p {
+  line-height:150px;
+  color: white;
+  font-size:16px;
+  vertical-align:middle;
+}
+
 
 .icons img {
   display: block;
@@ -172,7 +213,7 @@ body {
 }
 
 body {
-  padding-top: 50px;
+  padding-top: 40px;
   background-color: black;
   font-family: 'Ubuntu', sans-serif;
   font-weight:300;
